@@ -563,9 +563,9 @@ class ImporterPreviewTest extends FunctionalTestCaseWithDatabaseTools
                                 'categories' => '',
                                 'created' => 1629981780,
                                 'name' => 'Chain mail (base)',
+                                'pictures' => '',
                                 'sku' => '000005',
                                 'tags' => '2,3',
-                                'pictures' => '',
                                 'pid' => 1,
                             ],
                         ],
